# plazma

./: .clang-tidy  ReadMe.md  meson.build  subprojects.txt
include/plazma/: base.hpp  decode.hpp  encode.hpp  plazma.hpp
include/plazma/base/: block.hpp  defs.hpp  exception.hpp  filters.hpp  stream.hpp
include/plazma/decode/: block.ipp  decode.hpp  read-index.hpp  reader.hpp
include/plazma/encode/: writer.hpp
src/: args.c  args.h  coder.c  coder.h  config.h  file_io.c  file_io.h  hardware.c  hardware.h  main.c  message.c  message.h  private.h  suffix.c  sysdefs.h  tuklib_common.h  tuklib_exit.c  util.h
subprojects/: .gitignore  liblzma.wrap  thesauros.wrap
subprojects/options/: meson.build
subprojects/packagefiles/argparse/: meson.build
subprojects/packagefiles/fmt/: meson_options.txt
subprojects/packagefiles/liblzma/: meson.build  meson_options.txt
subprojects/packagefiles/liblzma/files/: meson.build
subprojects/packagefiles/liblzma/src/liblzma/: meson.build
subprojects/packagefiles/liblzma/tests/: meson.build
test/: alice-read.cpp  alice-write.cpp  alice.cpp  meson.build
test/data/: alice.md  alice.md.xz  clean.py
tools/: compress.cpp  compression-ratio.cpp  info.cpp  meson.build
